--- a/tmux.conf
+++ b/tmux.conf
@@ -21,3 +21,11 @@ bind-key -n C-Right resize-pane -R 1
 bind-key -n C-Up resize-pane -U 1
 bind-key -n C-Down resize-pane -D 1
 set-option -g history-limit 8192
+
+# settings for AIX
+# terminal overrides to enable colors
+if-shell "uname|grep AIX" 'set -g terminal-overrides "xterm*:XT,xterm*:setab=\\E[4%p1%dm,xterm*:setaf=\\E[3%p1%dm"'
+
+# set default terminal to vt100 or xterm (screen does not exist on AIX)
+#if-shell "uname|grep AIX" "set -g default-terminal vt100"
+if-shell "uname|grep AIX" "set -g default-terminal xterm"
