--- a/tmux.conf
+++ b/tmux.conf
@@ -15,4 +15,9 @@ bind-key -n M-Up    select-pane -U
 bind-key -n M-Down  select-pane -D
 bind-key -n M-Left  select-pane -L
 bind-key -n M-Right select-pane -R
+bind-key -n M-Tab select-pane -R
+bind-key -n C-Left resize-pane -L 1
+bind-key -n C-Right resize-pane -R 1
+bind-key -n C-Up resize-pane -U 1
+bind-key -n C-Down resize-pane -D 1
 set-option -g history-limit 8192
